Se hace se parte del seccion del parque arvi

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ fecha: 03/04/2024
     <title>EcoMedellin</title>
 </head>
 <body>
+
+    <!-- Creacion del header -->
     <header class="header">
         <section class="rightHeader">
             <h1>EcoMedellin</h1>
@@ -40,5 +42,39 @@ fecha: 03/04/2024
             </nav>
         </section>
     </header>
+
+    <!-- Creacion del main  -->
+
+    <main class="main">
+
+        <!-- seccion principal imagen  -->
+
+        <section class="principalImgSection">
+            <article class="principalImgSectionText">
+                <h2>Explora la Belleza Natrual de Medellin</h2>
+                <p>Descubre porque los puntos verdes, parques y areas naturales son tan importantes para la ciudad de Medellin. Sumergete en la biodiversidad unica que ofrecen estos espacios y disfruta de la conexion con la naturaleza en tu vida diaria.</p>
+            </article>
+        </section>
+
+        <!-- Seccion del parque Arvi -->
+
+        <section class="parqueArvi-container">
+            <article class="leftSection-park">
+                <div class="parkText-container">
+                    <h3>Parque Arvi</h3>
+                    <p>Si lo que buscas es una tarde con un poco mas de avenutura, el Parque Arvi es el lugar a donde debes ir. Hay tantas actividades al aire libre que te sera dificil elegir entre ellas: puedes armar un picnic, disfrutar de un trayecto en bicicleta, practicar un poco de senderismo, ver varias especies de a aves o pasar una sembrando arboles. Es, sin duda, un lugar para quienes disfrutan al maximo la naturaleza. Es recomendable que vayas con ropa comoda pero tambien que te mantengas abrigado. Es un uno de los parques para visitar en Medellin mas populares. Adentrate en el y descubre porque</p>
+
+                    <h4><span><i class="bi bi-calendar-event-fill"></i></span> Horarios</h4>
+                    <p>Abierto de lunes a domingo de 8:00 am a 6:00 pm.</p>
+
+                    <h4><span><i class="bi bi-geo-alt-fill"></i></span> Ubicacion </h4>
+                    <address>
+                        <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.8733886160007!2d-75.50522532420862!3d6.280371193708471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442641a4ea9d53%3A0x33ed6dc5217b782c!2sParque%20Arv%C3%AD!5e0!3m2!1ses-419!2sco!4v1712162639223!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </address>
+                </div>
+            </article>
+            <article></article>
+        </section>
+    </main>
 </body>
 </html>
