--- a/index.html
+++ b/index.html
@@ -58,22 +58,65 @@ fecha: 03/04/2024
 
         <!-- Seccion del parque Arvi -->
 
-        <section class="parqueArvi-container">
-            <article class="leftSection-park">
-                <div class="parkText-container">
-                    <h3>Parque Arvi</h3>
-                    <p>Si lo que buscas es una tarde con un poco mas de avenutura, el Parque Arvi es el lugar a donde debes ir. Hay tantas actividades al aire libre que te sera dificil elegir entre ellas: puedes armar un picnic, disfrutar de un trayecto en bicicleta, practicar un poco de senderismo, ver varias especies de a aves o pasar una sembrando arboles. Es, sin duda, un lugar para quienes disfrutan al maximo la naturaleza. Es recomendable que vayas con ropa comoda pero tambien que te mantengas abrigado. Es un uno de los parques para visitar en Medellin mas populares. Adentrate en el y descubre porque</p>
+        <section class="park-container">
+            <article class="parkText-container">
+                <h3>Parque Arvi</h3>
+                <p>Si lo que buscas es una tarde con un poco mas de avenutura, el Parque Arvi es el lugar a donde debes ir. Hay tantas actividades al aire libre que te sera dificil elegir entre ellas: puedes armar un picnic, disfrutar de un trayecto en bicicleta, practicar un poco de senderismo, ver varias especies de a aves o pasar una sembrando arboles. Es, sin duda, un lugar para quienes disfrutan al maximo la naturaleza. Es recomendable que vayas con ropa comoda pero tambien que te mantengas abrigado. Es un uno de los parques para visitar en Medellin mas populares. Adentrate en el y descubre porque</p>
 
-                    <h4><span><i class="bi bi-calendar-event-fill"></i></span> Horarios</h4>
-                    <p>Abierto de lunes a domingo de 8:00 am a 6:00 pm.</p>
+                <h4><span><i class="bi bi-calendar-event-fill"></i></span> Horarios</h4>
+                <p>Abierto de lunes a domingo de 8:00 am a 6:00 pm.</p>
 
-                    <h4><span><i class="bi bi-geo-alt-fill"></i></span> Ubicacion </h4>
-                    <address>
-                        <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.8733886160007!2d-75.50522532420862!3d6.280371193708471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442641a4ea9d53%3A0x33ed6dc5217b782c!2sParque%20Arv%C3%AD!5e0!3m2!1ses-419!2sco!4v1712162639223!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </address>
+                <h4><span><i class="bi bi-geo-alt-fill"></i></span> Ubicacion </h4>
+                <address>
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.8733886160007!2d-75.50522532420862!3d6.280371193708471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442641a4ea9d53%3A0x33ed6dc5217b782c!2sParque%20Arv%C3%AD!5e0!3m2!1ses-419!2sco!4v1712162639223!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </address>
+            </article>
+            <article class="parkImg-container">
+                <div class="firstImg-container">
+                    <figure>
+                        <img class="firstImg" src="./public/img/imagen2.webp" alt="Parque arvi 1">
+                    </figure>
+                </div>
+                <div class="otherImg-container">
+                    <figure>
+                        <img class="otherImg" src="./public/img/imagen3.webp" alt="Parque arvi 2">
+                    </figure>
+                    <figure>
+                        <img class="otherImg" src="./public/img/imagen4.webp" alt="Parque arvi 3">
+                    </figure>
                 </div>
             </article>
-            <article></article>
+        </section>
+
+         <!-- Seccion del jardin botanico -->
+        <section class="park-container">
+            <article class="parkText-container">
+                <h3>Jardin botanico</h3>
+                <p>Tenemos que empezar por uno de los espacios naturales mas grandes de Medellin. El jardin Botanico reune varios ambientes naturales y los mezcla de manera actractiva con actividades educativas, restaurantes, espacio para investigar la variedad de especies naturales y arquitectura impresionante. Los edificios, los senderos, el teatro dentro del jardin y, sibre todo, el Orquideorama -una recreacion arquitectonica que muestra la naturaleza como obra de arte-, hacen de este uno de los jardines mas innovadores del pais. Empezar con el Jardin Botanico te llenara de aire fresco y te dejara listo para recorrer todos los parque de la ciudad.</p>
+
+                <h4><span><i class="bi bi-calendar-event-fill"></i></span> Horarios</h4>
+                <p>Abierto de martes a domingo de 9:00 am a 4:00 pm.</p>
+
+                <h4><span><i class="bi bi-geo-alt-fill"></i></span> Ubicacion </h4>
+                <address>
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.9487239827868!2d-75.56613952420867!3d6.27047389371826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4428e80e411f91%3A0x142ab912fdb68353!2zSmFyZMOtbiBCb3TDoW5pY28gZGUgTWVkZWxsw61u!5e0!3m2!1ses-419!2sco!4v1712164743260!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </address>
+            </article>
+            <article class="parkImg-container">
+                <div class="firstImg-container">
+                    <figure>
+                        <img class="firstImg" src="./public/img/imagen5.webp" alt="Jardin botanico 1">
+                    </figure>
+                </div>
+                <div class="otherImg-container">
+                    <figure>
+                        <img class="otherImg-jardin" src="./public/img/imagen6.webp" alt="Jardin botanico 2">
+                    </figure>
+                    <figure>
+                        <img class="otherImg-jardin" src="./public/img/imagen7.webp" alt="Jardin botanico 3">
+                    </figure>
+                </div>
+            </article>
         </section>
     </main>
 </body>
