Se termina el proyecto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ fecha: 03/04/2024
     <meta name="organization" content="RIWI_DELL" />
     <meta name="author" content="Pablo Andres Ruiz Arias" />
     <meta name="designer" content="Pablo Andres Ruiz Arias" />
-    <meta name="copyright" content="© 2024 Riwi EcoMedellin. Todos los derechos reservados">
+    <meta name="copyright" content="© 2024 EcoMedellin. Todos los derechos reservados">
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="revisit-after" content="15days" />
@@ -35,9 +35,9 @@ fecha: 03/04/2024
         <section class="leftHeader">
             <nav>
                 <ul class="navList">
-                    <li><a href=""><span><i class="bi bi-tree-fill"></i></span> Parques</a></li>
-                    <li><a href=""> <span><i class="bi bi-cloud-sun-fill"></i></span> Jardines</a>  </li>
-                    <li><a href=""> <span><i class="bi bi-image-alt"></i></span> Normas en puntos verdes</a> </li>
+                    <li><a href="#parqueArvi"><span><i class="bi bi-tree-fill"></i></span> Parques</a></li>
+                    <li><a href="#jardin"> <span><i class="bi bi-cloud-sun-fill"></i></span> Jardines</a>  </li>
+                    <li><a href="#normas"> <span><i class="bi bi-image-alt"></i></span> Normas en puntos verdes</a> </li>
                 </ul>
             </nav>
         </section>
@@ -58,7 +58,7 @@ fecha: 03/04/2024
 
         <!-- Seccion del parque Arvi -->
 
-        <section class="park-container">
+        <section id="parqueArvi" class="park-container">
             <article class="parkText-container">
                 <h3>Parque Arvi</h3>
                 <p>Si lo que buscas es una tarde con un poco mas de avenutura, el Parque Arvi es el lugar a donde debes ir. Hay tantas actividades al aire libre que te sera dificil elegir entre ellas: puedes armar un picnic, disfrutar de un trayecto en bicicleta, practicar un poco de senderismo, ver varias especies de a aves o pasar una sembrando arboles. Es, sin duda, un lugar para quienes disfrutan al maximo la naturaleza. Es recomendable que vayas con ropa comoda pero tambien que te mantengas abrigado. Es un uno de los parques para visitar en Medellin mas populares. Adentrate en el y descubre porque</p>
@@ -89,7 +89,7 @@ fecha: 03/04/2024
         </section>
 
          <!-- Seccion del jardin botanico -->
-        <section class="park-container">
+        <section id="jardin" class="park-container">
             <article class="parkText-container">
                 <h3>Jardin botanico</h3>
                 <p>Tenemos que empezar por uno de los espacios naturales mas grandes de Medellin. El jardin Botanico reune varios ambientes naturales y los mezcla de manera actractiva con actividades educativas, restaurantes, espacio para investigar la variedad de especies naturales y arquitectura impresionante. Los edificios, los senderos, el teatro dentro del jardin y, sibre todo, el Orquideorama -una recreacion arquitectonica que muestra la naturaleza como obra de arte-, hacen de este uno de los jardines mas innovadores del pais. Empezar con el Jardin Botanico te llenara de aire fresco y te dejara listo para recorrer todos los parque de la ciudad.</p>
@@ -118,6 +118,80 @@ fecha: 03/04/2024
                 </div>
             </article>
         </section>
+
+        <!-- Seccion de normas -->
+        <section id="normas" class="normas-container">
+            <article class="normasText-container">
+                <h3>Normas de Ecologia</h3>
+                <p>En Medellin, nos encontramos con un gran numero de puntos de ecologia. Estos puntos de ecologia son especialmente destacados por su excelente calidad, la calidad de los productos y la calidad de los servicios</p>
+                <p>Sin embargo es importante tener en cuenta las normas para mantener el entorno ecologico en optimas condiciones.</p>
+            </article>
+            
+            <article class="cards-container">
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-flower3"></i></span>
+                    <h4>Respetar la flora y fauna</h4>
+                    <p class="cardText">Evitar tocar, recolectar o dañar plantas y animales en su habitat natural</p>
+                </div>
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-trash-fill"></i></span>
+                    <h4>No arrojar basura</h4>
+                    <p class="cardText">Utilizar los contendores adecuados y mantener los espacios limpios</p>
+                </div>
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-sign-turn-right-fill"></i></span>
+                    <h4>Seguir los senderos designados</h4>
+                    <p class="cardText">Caminar solo por las areas permitidas para preservar la vegetacion y evitar la erosion.</p>
+                </div>
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-x-circle-fill"></i></span>
+                    <h4>No alimentar los animales</h4>
+                    <p class="cardText">Evitar darles comida a los animales para prevenir dependencias y alterar su comportamiento natural</p>
+                </div>
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-fire"></i></span>
+                    <h4>No hacer fuego</h4>
+                    <p class="cardText">Prohibido encender fogatas o usar dispositivos de calefaccion, especialmebte en areas no designadas.</p>
+                </div>
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-trash2-fill"></i></span>
+                    <h4>Controlar a las mascotas</h4>
+                    <p class="cardText">En caso de permitirse, mantener a las mascotas bajo control y recoger sus excrementos.</p>
+                </div>
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-exclamation-diamond-fill"></i></span>
+                    <h4>Respetar las señales y normativas</h4>
+                    <p class="cardText">Seguir las indicaciones y reglamentos establecidos para garantizar la seguiridad y conservacion del area.</p>
+                </div>
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-volume-up-fill"></i></span>
+                    <h4>No hacer ruido excesivo</h4>
+                    <p class="cardText">Mantener un nivel de ruido bajo para no perturbar a la fauna ni a otros visitantes</p>
+                </div>
+                <div class="card">
+                    <span class="cardIcon"><i class="bi bi-droplet-half"></i></span>
+                    <h4>Ser responsable con el agua y energia</h4>
+                    <p class="cardText">Utilizar los recursos naturales de manera consciente y evitar desperdiciar agua y energia.</p>
+                </div>
+            </article>
+        </section>
     </main>
+
+    <!-- footer -->
+    <footer class="footer">
+        <section class="left-footer">
+            <figure>
+                <img class="alcadiaImg" src="./public/img/logo-alcaldia.webp" alt="Alcadia de Medellin">
+            </figure>
+            <ul class="listaRedes">
+                <li><a target="_blank" href="https://twitter.com/?lang=es"><i class="bi bi-twitter-x"></i></a></li>
+                <li><a target="_blank" href="mailto:alcaldiaMedellin@hotmail.com"><i class="bi bi-envelope-fill"></i></a></li>
+                <li><a target="_blank" href="https://wa.me/573022594216/?text=Escribenos para mas informacion"><i class="bi bi-whatsapp"></i></a></li>
+            </ul>
+        </section>
+        <section class="right-footer">
+            <p class="footerText">© 2024 EcoMedellin. Todos los derechos reservados.</p>
+        </section>
+    </footer>
 </body>
 </html>
