Se agregan comentarios

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ fecha: 03/04/2024
     <meta name="description"
         content="En esta pagina encontras los mejores puntos ecologicos de la ciudad de Medellin, Colombia" />
     <meta name="keywords"
-        content="Ecologico, Jadin, Parque, Turismo, Verde, Naturaleza, Medellin, Colombia">
+        content="Ecologico, Jadin, Parque, Turismo, Verde, Naturaleza, Medellin, Colombia, parque arvi, jardin botanico">
     <meta name="sitedomain" content="https://example.com/" />
     <meta name="organization" content="RIWI_DELL" />
     <meta name="author" content="Pablo Andres Ruiz Arias" />
@@ -59,6 +59,7 @@ fecha: 03/04/2024
         <!-- Seccion del parque Arvi -->
 
         <section id="parqueArvi" class="park-container">
+            <!-- Este article contiene la parte izquierda-->
             <article class="parkText-container">
                 <h3>Parque Arvi</h3>
                 <p>Si lo que buscas es una tarde con un poco mas de avenutura, el Parque Arvi es el lugar a donde debes ir. Hay tantas actividades al aire libre que te sera dificil elegir entre ellas: puedes armar un picnic, disfrutar de un trayecto en bicicleta, practicar un poco de senderismo, ver varias especies de a aves o pasar una sembrando arboles. Es, sin duda, un lugar para quienes disfrutan al maximo la naturaleza. Es recomendable que vayas con ropa comoda pero tambien que te mantengas abrigado. Es un uno de los parques para visitar en Medellin mas populares. Adentrate en el y descubre porque</p>
@@ -71,6 +72,8 @@ fecha: 03/04/2024
                     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.8733886160007!2d-75.50522532420862!3d6.280371193708471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e442641a4ea9d53%3A0x33ed6dc5217b782c!2sParque%20Arv%C3%AD!5e0!3m2!1ses-419!2sco!4v1712162639223!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </address>
             </article>
+
+            <!-- Este article contiene la parte derecha-->
             <article class="parkImg-container">
                 <div class="firstImg-container">
                     <figure>
@@ -90,6 +93,7 @@ fecha: 03/04/2024
 
          <!-- Seccion del jardin botanico -->
         <section id="jardin" class="park-container">
+            <!-- Este article contiene la parte derecha-->
             <article class="parkText-container">
                 <h3>Jardin botanico</h3>
                 <p>Tenemos que empezar por uno de los espacios naturales mas grandes de Medellin. El jardin Botanico reune varios ambientes naturales y los mezcla de manera actractiva con actividades educativas, restaurantes, espacio para investigar la variedad de especies naturales y arquitectura impresionante. Los edificios, los senderos, el teatro dentro del jardin y, sibre todo, el Orquideorama -una recreacion arquitectonica que muestra la naturaleza como obra de arte-, hacen de este uno de los jardines mas innovadores del pais. Empezar con el Jardin Botanico te llenara de aire fresco y te dejara listo para recorrer todos los parque de la ciudad.</p>
@@ -102,6 +106,7 @@ fecha: 03/04/2024
                     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.9487239827868!2d-75.56613952420867!3d6.27047389371826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4428e80e411f91%3A0x142ab912fdb68353!2zSmFyZMOtbiBCb3TDoW5pY28gZGUgTWVkZWxsw61u!5e0!3m2!1ses-419!2sco!4v1712164743260!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </address>
             </article>
+            <!-- Este article contiene la parte derecha-->
             <article class="parkImg-container">
                 <div class="firstImg-container">
                     <figure>
@@ -121,12 +126,14 @@ fecha: 03/04/2024
 
         <!-- Seccion de normas -->
         <section id="normas" class="normas-container">
+            <!-- Este article contiene la parte del texto -->
             <article class="normasText-container">
                 <h3>Normas de Ecologia</h3>
                 <p>En Medellin, nos encontramos con un gran numero de puntos de ecologia. Estos puntos de ecologia son especialmente destacados por su excelente calidad, la calidad de los productos y la calidad de los servicios</p>
                 <p>Sin embargo es importante tener en cuenta las normas para mantener el entorno ecologico en optimas condiciones.</p>
             </article>
             
+            <!-- Este article contiene las cartas-->
             <article class="cards-container">
                 <div class="card">
                     <span class="cardIcon"><i class="bi bi-flower3"></i></span>
@@ -179,6 +186,7 @@ fecha: 03/04/2024
 
     <!-- footer -->
     <footer class="footer">
+        <!-- Esta seccion contiene la parte de la alcaldia y las redes -->
         <section class="left-footer">
             <figure>
                 <img class="alcadiaImg" src="./public/img/logo-alcaldia.webp" alt="Alcadia de Medellin">
@@ -189,6 +197,7 @@ fecha: 03/04/2024
                 <li><a target="_blank" href="https://wa.me/573022594216/?text=Escribenos para mas informacion"><i class="bi bi-whatsapp"></i></a></li>
             </ul>
         </section>
+        <!-- Esta seccion contiene el copyright-->
         <section class="right-footer">
             <p class="footerText">© 2024 EcoMedellin. Todos los derechos reservados.</p>
         </section>
